--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
